# Fast-API-Project

./: .gitignore  docker-compose.yaml  dockerfile  main.py  pyproject.toml  readme.rm
.github/: ci.yml
.github/workflows/: ci.yml
src/: data.json  database.py  main.py  models.py  router.py
test/: test_router.py
