[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = "simple API project"
authors = ["Tony <tonytimoshe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytest = "^8.3.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
